--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Главный бидося · Никита под вопросом</title>
+    <title>Главный бидося · Кусь за бочок</title>
     <style>
         * {
             box-sizing: border-box;
@@ -88,7 +88,6 @@
             box-shadow: 0 0 0 #0f1a22, 0 18px 30px rgba(0,0,0,0.5);
         }
 
-        /* Стиль для кнопки Никиты (предупреждающий) */
         .choice.nikita {
             background: #ffd166;
             color: #2d3e50;
@@ -99,7 +98,6 @@
             background: #f7c14a;
         }
 
-        /* Стиль для кнопки Алины */
         .choice.alina {
             background: #ef476f;
             color: white;
@@ -110,6 +108,7 @@
             background: #d43f5e;
         }
 
+        /* ----- БЛОК РЕЗУЛЬТАТА (универсальный) ----- */
         .result-area {
             background: rgba(10, 20, 30, 0.7);
             backdrop-filter: blur(6px);
@@ -145,9 +144,54 @@
             filter: drop-shadow(2px 8px 6px black);
         }
 
-        .error-message {
-            border-color: #ff8c8c !important;
-            background: rgba(50, 10, 20, 0.8) !important;
+        /* ----- ОСОБЫЙ СТИЛЬ ДЛЯ МЕНЮ "КУСЬ" ----- */
+        .kiss-menu {
+            background: #ffddee;
+            background: linear-gradient(145deg, #ffe6f0, #ffd0e0);
+            border: 4px solid #ffa7b9;
+            border-radius: 50px;
+            padding: 25px 20px;
+            color: #8b2c4a;
+            text-shadow: 0 2px 10px white;
+            box-shadow: 0 0 30px #ffb6c1;
+            font-family: 'Comic Sans MS', cursive, sans-serif;
+            transform: scale(1.05);
+            animation: pulse 1.5s infinite;
+        }
+
+        @keyframes pulse {
+            0% { box-shadow: 0 0 20px #ff99aa; }
+            50% { box-shadow: 0 0 40px #ff4d6d; }
+            100% { box-shadow: 0 0 20px #ff99aa; }
+        }
+
+        .kiss-text {
+            font-size: 2rem;
+            font-weight: bold;
+            color: #a12e4a;
+            margin-bottom: 10px;
+        }
+
+        .kiss-emoji {
+            font-size: 3.5rem;
+            display: inline-block;
+            animation: wobble 0.8s infinite;
+        }
+
+        @keyframes wobble {
+            0%,100% { transform: rotate(0deg); }
+            25% { transform: rotate(15deg); }
+            75% { transform: rotate(-10deg); }
+        }
+
+        .kiss-footer {
+            margin-top: 15px;
+            font-size: 1.2rem;
+            background: #ffecb3;
+            padding: 8px 20px;
+            border-radius: 40px;
+            color: #664500;
+            display: inline-block;
         }
 
         .reset-btn {
@@ -182,26 +226,26 @@
 <body>
     <div class="quiz-card">
         <h1>👑 БИДОСЯ</h1>
-        <div class="subhead">Кто тут главный? Выбери</div>
+        <div class="subhead">Кто тут главный? (спойлер: не Никита)</div>
 
         <div class="options">
-            <!-- Никита: активен, но при клике — объяснение, почему нельзя -->
+            <!-- Никита — активен, но выдаёт отмазку -->
             <button class="choice nikita" id="nikitaBtn">
                 <span>🥒</span> Никита
             </button>
-            <!-- Алина — выбор победителя -->
+            <!-- Алина — выбор победителя, появляется меню с кусь -->
             <button class="choice alina" id="alinaBtn">
                 <span>🍑</span> Алина
             </button>
         </div>
 
-        <!-- Блок для сообщения (появляется при клике) -->
+        <!-- Универсальный блок, в который подгружается контент -->
         <div id="resultBlock" class="result-area">
             <div id="resultMessage" class="result-message"></div>
         </div>
 
-        <button id="resetBtn" class="reset-btn">⟳ Сбросить</button>
-        <footer>бидося-тест · Никита — только посмотреть</footer>
+        <button id="resetBtn" class="reset-btn">⟳ Сбросить и выбрать снова</button>
+        <footer>бидося-тест · Никита — мимо, Алина — кусь</footer>
     </div>
 
     <script>
@@ -211,47 +255,65 @@
         const resultMessage = document.getElementById('resultMessage');
         const resetBtn = document.getElementById('resetBtn');
 
-        // Сообщение для Алины (победа)
-        function showAlinaMessage() {
-            resultMessage.innerHTML = `
-                <span class="big-emoji">👸🔥</span>
-                <span style="font-size:1.8rem;">АЛИНА — ГЛАВНАЯ БИДОСЯ!</span>
-                <span style="font-size:1.1rem; opacity:0.9; margin-top:8px;">Сомнений нет, корона её ✨</span>
-            `;
-            resultBlock.classList.add('show');
-        }
-
-        // Сообщение для Никиты (ошибка / пояснение)
+        // --- Сообщение для Никиты (ошибка / отмазка) ---
         function showNikitaError() {
-            // Список смешных причин, можно добавить свои
             const reasons = [
                 "Никита проспал свой шанс 😴",
                 "У Никиты закончились бидося-баллы 🎟️",
                 "Никита сегодня не в бидосе 🤷",
                 "Алина уже заняла трон 👑",
                 "Никита забыл пароль от бидоси 🔐",
-                "Кодекс бидоси запрещает 🚫"
+                "Кодекс бидоси запрещает 🚫",
+                "Никита сам признал, что Алина — богиня 🛐"
             ];
-            // Выбираем случайную причину
             const randomReason = reasons[Math.floor(Math.random() * reasons.length)];
 
             resultMessage.innerHTML = `
                 <span class="big-emoji">🚫🥒</span>
-                <span style="font-size:1.8rem; color: #ffb3b3;">НИКИТА НЕ МОЖЕТ БЫТЬ ГЛАВНЫМ</span>
+                <span style="font-size:1.8rem; color: #ffb3b3;">НИКИТА НЕ ПРОХОДИТ</span>
                 <span style="font-size:1.2rem; background: rgba(200,60,60,0.7); padding: 10px 20px; border-radius: 50px; margin-top: 12px;">
                     ${randomReason}
                 </span>
             `;
+            // Убираем возможный класс kiss-menu, если вдруг остался
+            resultBlock.classList.remove('kiss-menu-style');
+            resultBlock.style.background = ''; // сбрасываем фон
+            resultBlock.style.border = '';
             resultBlock.classList.add('show');
         }
 
-        // Обработчики
-        nikitaBtn.addEventListener('click', showNikitaError);
-        alinaBtn.addEventListener('click', showAlinaMessage);
+        // --- Сообщение для Алины: НОВОЕ МЕНЮ с кусь ---
+        function showAlinaKissMenu() {
+            // Полностью переопределяем содержимое блока
+            resultMessage.innerHTML = `
+                <div class="kiss-menu">
+                    <span class="kiss-emoji">😘😍🥰</span>
+                    <div class="kiss-text">А кто это у нас такой красивый?</div>
+                    <div style="font-size: 2.5rem; margin: 10px 0;">🍑✨</div>
+                    <div style="font-size: 2rem; background: #ff99aa; padding: 15px 25px; border-radius: 60px; color: white; text-shadow: 2px 2px 0 #b34e5e;">
+                        Кусь за бочок хаха 😂💖
+                    </div>
+                    <span class="kiss-footer">Самый сладкий бидося 👸</span>
+                </div>
+            `;
+            // Добавляем особое оформление самому блоку result-area (чтоб сиял)
+            resultBlock.style.background = '#ffc0cb';
+            resultBlock.style.border = '4px solid #ff6f91';
+            resultBlock.style.boxShadow = '0 0 40px #ff4d6d';
+            resultBlock.classList.add('show');
+        }
 
-        // Сброс — скрываем блок
+        // --- Обработчики ---
+        nikitaBtn.addEventListener('click', showNikitaError);
+        alinaBtn.addEventListener('click', showAlinaKissMenu);
+
+        // --- Сброс: скрываем блок и сбрасываем кастомные стили ---
         resetBtn.addEventListener('click', function() {
             resultBlock.classList.remove('show');
+            // Возвращаем стандартный фон для result-area
+            resultBlock.style.background = 'rgba(10, 20, 30, 0.7)';
+            resultBlock.style.border = '1px solid rgba(255,215,0,0.5)';
+            resultBlock.style.boxShadow = 'inset 0 0 15px rgba(0,0,0,0.5), 0 10px 20px black';
         });
     </script>
 </body>
